Removed sin approx - was actually slower than in-built sin function.

--- a/lib/goomtests/CMakeLists.txt
+++ b/lib/goomtests/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable( ${PROJECT_NAME}
     src/test_main.cpp
     src/test_colorutils.cpp
     src/test_goomrand.cpp
+    src/test_mathutils.cpp
     src/test_strutils.cpp
 )
 
