--- a/lib/goomtests/CMakeLists.txt
+++ b/lib/goomtests/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable( ${PROJECT_NAME}
     src/test_colorutils.cpp
     src/test_goomrand.cpp
     src/test_mathutils.cpp
+    src/test_parallel_utils.cpp
     src/test_strutils.cpp
 )
 
